--- a/src/app/adm/fotos-login/foto-inteira/foto-inteira.component.html
+++ b/src/app/adm/fotos-login/foto-inteira/foto-inteira.component.html
@@ -1,7 +1,7 @@
 <div >
     <h2 style="text-align:center ;">Imagem</h2>
    <div class="dialog">
-
+    <p style="text-align:center ;">{{data2.responsividade}}</p>
        <img src="{{data2.url}}" width=100% height=100% alt="">
    </div>
    <div class="dialog">
