--- a/src/app/perfil/feed/feed.component.html
+++ b/src/app/perfil/feed/feed.component.html
@@ -1,4 +1,8 @@
-<mat-card class="example-card">
+<div >
+<button mat-fab color="primary"><mat-icon>add</mat-icon></button>
+</div>
+<div class="centralizar">
+  <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Shiba Inu</mat-card-title>
@@ -17,4 +21,6 @@
       <button mat-button>SHARE</button>
     </mat-card-actions>
   </mat-card>
+</div>
+
   
